force-app/main/default/objects/Zoom_Integration_Error__c/Zoom_Integration_Error__c.object-meta.xml
<CustomObject>
    <label>Zoom Integration Error</label>
    <pluralLabel>Zoom Integration Errors</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Zoom Integration Error Name</label>
        <displayFormat>ZIE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>