force-app/main/default/objects/Zoom_Integration_Error__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <type>Text</type>
    <length>255</length>
</CustomField>