force-app/main/default/objects/Zoom_Integration_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callout Timeout</fullName>
            </value>
            <value>
                <fullName>Governor Limit</fullName>
            </value>
            <value>
                <fullName>Callout Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transcript Not Ready</fullName>
            </value>
            <value>
                <fullName>Zoom Cannot Transcribe</fullName>
            </value>
            <value>
                <fullName>Voice Call Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>