force-app/main/default/objects/Zoom_Integration_Error__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <label>Raw Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON-serialized webhook payload captured when a retryable failure needs to rebuild the original request later (e.g. VoiceCall creation) - unlike Recording_Id__c-based retries, this failure mode has no simpler identifier to re-fetch the data from.</description>
</CustomField>