force-app/main/default/objects/Zoom_Integration_Error__c/fields/Recording_Id__c.field-meta.xml
<CustomField>
    <fullName>Recording_Id__c</fullName>
    <label>Recording Id</label>
    <type>Text</type>
    <length>255</length>
    <description>Zoom Phone recording id used to re-fetch the transcript on retry. Only populated for retryable errors (e.g. Zoom error 12002, &quot;still being transcribed&quot;).</description>
</CustomField>