force-app/main/default/objects/Zoom_Integration_Error__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>False only while a retry is still pending (Recording_Id__c populated, Next_Retry_At__c not yet reached). True for every other logged error, and set true once a retry succeeds or is given up on.</description>
</CustomField>