force-app/main/default/objects/Zoom_Integration_Error__c/fields/Voice_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Id__c</fullName>
    <label>Voice Call Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Id of the VoiceCall this recording's Call_Transcript__c should be attached to once a retry succeeds.</description>
</CustomField>