force-app/main/default/objects/Zoom_Integration_Error__c/fields/Zoom_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_User_Id__c</fullName>
    <label>Zoom User Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>